Update theme colors to Cardano brand and add new logo assets

--- a/public/index.html
+++ b/public/index.html
@@ -2,14 +2,29 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="%PUBLIC_URL%/cardanokids-logo.png" />
+    <link rel="shortcut icon" href="%PUBLIC_URL%/cardanokids-logo.png" />
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/cardanokids-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
+    <meta name="theme-color" content="#0033AD" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Cardano Kids - An educational platform teaching blockchain technology to children ages 6-14"
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://cardanokids.com/" />
+    <meta property="og:title" content="Cardano Kids" />
+    <meta property="og:description" content="An educational platform teaching blockchain technology to children ages 6-14" />
+    <meta property="og:image" content="%PUBLIC_URL%/cardanokids-logo.png" />
+    
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://cardanokids.com/" />
+    <meta property="twitter:title" content="Cardano Kids" />
+    <meta property="twitter:description" content="An educational platform teaching blockchain technology to children ages 6-14" />
+    <meta property="twitter:image" content="%PUBLIC_URL%/cardanokids-logo.png" />
+
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
